@@ -1,3 +1,7 @@
+2007-03-15  Johan Euphrosine  <proppy@aminche.com>
+
+	* added fold, check, call, raise action
+
 2007-03-14  Johan Euphrosine  <proppy@aminche.com>
 
 	* added clickable seat
